[package]
name = "gdal-geotransform"
version = "0.1.0"
authors = ["Nico Mandery <nico@nmandery.net>"]
edition = "2018"
license = "MIT"
description = "Utility functions to work with GDALs Geotransforms to convert between pixel ccordinates and geographical coordinates"

[dependencies]
gdal = "0.6.0"
gdal-sys = "0.2.0"
geo-types = "0.4.3"

[dev-dependencies]
approx = "0.3.2"
